# translate-in-shell

./: README.md  pyproject.toml
.claude/commands/: add-test.md  completed-review.md  git-msg.md  git-show.md  update-claude.md
src/translate/: main.py
